# dino-brick

./: .gitignore  LICENSE  README.md  dino.cabal  stairs.cabal
app/: Main.hs
src/: Controls.hs  Dino.hs  Stairs.hs  UI.hs
