name:                dino
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/arcticmatt/dino-brick
license:             BSD3
license-file:        LICENSE
author:              Matt Lim
maintainer:          mlimcollege@gmail.com
copyright:           Copyright: (c) 2017 Matt Lim
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Dino
                     , Controls
                     , UI
  build-depends:       base >= 4.7 && < 5
                     , brick
                     , containers
                     , linear
                     , microlens
                     , microlens-th
                     , random
                     , vty
                     , MonadRandom
  default-language:    Haskell2010

executable dino
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -Wall -fno-warn-unused-do-bind -O3
  build-depends:       base >= 4.7 && < 5
                     , dino
                     , directory
                     , filepath
                     , optparse-applicative
  default-language:    Haskell2010
