name:                stairs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/arcticmatt/stairs#readme
license:             BSD3
license-file:        LICENSE
author:              Matt Lim
maintainer:          mlimcollege@gmail.com
copyright:           Copyright: (c) 2017 Matt Lim
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stairs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
